[gd_scene load_steps=2 format=3 uid="uid://hx3uj7in4g4t"]

[ext_resource type="Script" uid="uid://budfui1qgd71r" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_06t4h")

[node name="Background" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
